# workshop-pa1484

./: .clangd  .env.example  .gitignore  .neoconf.json  CMakeLists.txt  LICENSE  README.MD  README.md  defaultSettings.json  extra-env.py  flake.nix  justfile  keywords.txt  library.json  library.properties  platformio.ini
boards/: T-Display-AMOLED.json
firmware/: README.MD
lib/hal/: CREDITS.md  Display.hpp  EPS32Helper.hpp  HAL.hpp  IDisplay.hpp  LilyGoDisplay.cpp  LilyGoDisplay.hpp  SDLDisplay.cpp  SDLDisplay.hpp  SDLHelper.hpp  lv_conf.h
lib/nativeReplacements/: HTTPClient.h  JsonListener.h  JsonStreamingParser.cpp  LittleFS.h  String.cpp  String.h  WiFi.h
libdeps/AceButton/: CHANGELOG.md  README.md  library.properties
libdeps/Adafruit_NeoPixel/: esp.c
libdeps/ArduinoJson/: ArduinoJson.h  LICENSE.txt  library.json  library.properties
libdeps/Arduino_GFX/: README.md  library.properties
libdeps/SensorLib/: README.md  keywords.txt  library.json  library.properties
libdeps/XPowersLib/: library.json
libdeps/lvgl/: .gitignore  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  COPYRIGHTS.md  Kconfig  README.md  library.json  library.properties  lv_conf_template.h  lv_version.h  lvgl.h  (+1 more)
project/: FileHandling.cpp  FileHandling.h  constants.h  initGUI.cpp  initGUI.h  main.cpp  prelude.cpp  prelude.h  project.ino  statics.cpp  utilities.h
src/: InputParams.h  LV_Helper.cpp  LV_Helper.h  LV_Helper_unused.cpp  LilyGo_AMOLED.cpp  LilyGo_AMOLED.h  LilyGo_Display.h  initGUI.cpp  initGUI.h  initSequence.cpp  initSequence.h  lv_conf.h  lv_conf_unused.h
(+1624 files in other folders)
